--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, F
 <div class="container">
     <div class="todo-app">
 
-        <h2>To-Do List <img src="To-Do-Img/images/icon.png" alt=""></h2>
+        <h2>To-Do List <img src="./icon.png" alt=""></h2>
 
         <div class="row">
             <input type="text" id="input-box" placeholder="Enter your task">
